--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-h1{color: tomato !important}
+h1{color: white !important}
 /* esto es un comentario */
-body{background-color: tomato;}
+body{background-color: black;}
 summary{color: white;}
