--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,4 @@ h1{color: white !important}
 /* esto es un comentario */
 body{background-color: black;}
 summary{color: white;}
-body{caret-color: white;}
+table{color: white;}
