--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 h1{color: white !important}
 /* esto es un comentario */
-body{background-color: black;}
+body{background-color: red rgb(f9, f2, f6)}
 summary{color: white;}
 table{color: white;}
