--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,5 @@
 h1{color: black !important}
 /* esto es un comentario */
+body{background-color: blue;}
+body{color: black;}
+body{background-image: -moz-element();}
