--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-h1{color: black !important}
+h1{color: black 10mpx}
 /* esto es un comentario */
 body{background-color: brown;}
 body{color: black;}
