--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-h1{color: black 10mpx}
+h1{color: black}
 /* esto es un comentario */
 body{background-color: brown;}
 body{color: black;}
+#foto-body{ width: 50%;}
