--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 h1{color: black}
 /* esto es un comentario */
-body{background-color: brown;}
+body{background-color: rgb(104, 30, 30);}
 body{color: black;}
 #foto-body{ width: 50%; height: 50%;}
