--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,4 @@ h1{font-size: 70mp;}
 body{background-color: rgb(104, 30, 30);}
 body{color: black;}
 #foto-body{ width: 50%; height: 50%;}
+body{background-image:url(/gallardo.jpg)}
