--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 h1{color: white; 
     text-align: center;
-font-size: 75px;}
+font-size: 70px;}
+h2{text-align: center;}
 /* esto es un comentario */
 body{background-color: rgb(104, 30, 30);}
 body{color: white;}
-
+#goles{color: black;}
