--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,19 @@ h2{text-align: center;}
 body{background-color: rgb(104, 30, 30);}
 body{color: white;}
 #goles{color: black;}
+#goles{
+    width: 150px;
+    border: 15px solid green;
+    padding: 25px;
+    margin: 10px;
+  }
+  #fotoperfil {
+    width: 250px;
+    border: 15px solid black;
+    padding: 5px;
+    margin: 10px;
+  }
+  #icono-contacto {
+      width: 3%;
+      position: fixed;
+bottom: 10px; right: 20px;  }
