--- a/Raiz Nomada/styleRN.css
+++ b/Raiz Nomada/styleRN.css
@@ -10,25 +10,40 @@ menu > a > li{ display: inline;}
 
 h1{color: white;text-align: end; font-size: 500%; border-top: 100px;}
 
-
+#mision{
+  color:#2c1f19;
+  text-align: center;
+  font-size: 160%;
+  font-family: 'Beau Rivage', cursive; 
+}
 
 #icono-contacto{
   width: 3%;
   position: fixed;
 bottom: 10px; right: 20px;}
 
-.col{border: 2px solid black;}
-.col-8{border: 2px solid none}
+.col{color: white; border: 2px solid rgb(247, 245, 245);}
+.col-8{color: white; border: 2px solid none}
 
-body{background-image: url(./colas\ de\ zorro.jpeg), url(./foto\ 3.jfif), url(./foto\ 1.jfif);
+body{background-image: url(./colas\ de\ zorro.jpeg), url(./foto-3.jpeg), url(./foto-2.jpeg);
    background-position: top left,center center,bottom right;
   background-size: 100%;
   background-repeat: no-repeat,no-repeat, repeat;}
 
-  #ModeloDeCaja{
-    background-color: bisque;
+  #modelodecaja{background-color: bisque;
     width: 300px;
     border: 10px solid #704116;
     padding: 50px;
     margin: 20px;
     font-family: 'Open Sans', sans-serif;}
+
+#col2{background-color: rgb(65, 61, 61);}
+
+  #modelodecaja2{
+    background-color: bisque;
+    width: 300px;
+    border: 10px solid #704116;
+    padding: 50px;
+    margin: 20px;
+    font-family: 'Open Sans', sans-serif;
+  font-size: 160%;}
