--- a/Raiz Nomada/styleRN.css
+++ b/Raiz Nomada/styleRN.css
@@ -23,27 +23,32 @@ h1{color: white;text-align: end; font-size: 500%; border-top: 100px;}
 bottom: 10px; right: 20px;}
 
 .col{color: white; border: 2px solid rgb(247, 245, 245);}
-.col-8{color: white; border: 2px solid none}
+.col-6{color: white; border: 2px solid none}
 
 body{background-image: url(./colas\ de\ zorro.jpeg), url(./foto-3.jpeg), url(./foto-2.jpeg);
    background-position: top left,center center,bottom right;
   background-size: 100%;
   background-repeat: no-repeat,no-repeat, repeat;}
 
-  #modelodecaja{background-color: bisque;
+  #modelodecaja{background-color: rgb(65, 61, 61);
     width: 300px;
     border: 10px solid #704116;
     padding: 50px;
     margin: 20px;
     font-family: 'Open Sans', sans-serif;}
 
-#col2{background-color: rgb(65, 61, 61);}
+
+#col2{background-color: rgb(65, 61, 61);
+  width: 300px;
+  border: 10px solid #704116;
+  padding: 50px;
+  margin: 20px;}
 
   #modelodecaja2{
-    background-color: bisque;
+    background-color: rgb(65, 61, 61);
     width: 300px;
     border: 10px solid #704116;
     padding: 50px;
     margin: 20px;
     font-family: 'Open Sans', sans-serif;
-  font-size: 160%;}
+ font-size: 190%;}
