--- a/Raiz Nomada/styleRN.css
+++ b/Raiz Nomada/styleRN.css
@@ -1,6 +1,9 @@
-#logo-header{width: 75px;}
+#logo-header {
+  width: 75px;
+}
 
-header{ position: sticky;
+header {
+  position: sticky;
   list-style-type: none;
   position: sticky;
   position: -webkit-sticky;
@@ -8,117 +11,115 @@ header{ position: sticky;
   background-color: transparent;
 }
 
-  #col-der{
+#col-der {
   width: 93%;
   float: right;
 }
-#col-izq{ 
+#col-izq {
   width: 2%;
-  float:left;
+  float: left;
 }
-menu >a > li { 
+
+menu > a > li {
   display: inline;
   font-size: 130%;
-  font-family: 'Open Sans', sans-serif;
-  color:rgb(65, 61, 61)
-  ;
+  font-family: "Open Sans", sans-serif;
+  color: rgb(65, 61, 61);
 }
-menu{text-align: center;}
-
-
-
-h1{color: white;text-align: end;
-   font-size: 500%;
-   border-top: 100px;
-   background-color: rgb(151, 129, 113);}
-
-#mision{
+menu {
   text-align: center;
-  font-size: 140%; 
+}
+
+h1 {
+  color: white;
+  text-align: end;
+  font-size: 500%;
+  border-top: 100px;
+  background-color: rgb(151, 129, 113);
+  opacity: calc(70%);
+}
+
+#mision {
+  text-align: center;
+  font-size: 140%;
   text-align: end;
   color: #5b4937;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-#icono-contacto{
+#icono-contacto {
   width: 3%;
   position: fixed;
-bottom: 10px; right: 20px;
+  bottom: 10px;
+  right: 20px;
 }
 
-.col{color: white; border: 2px solid rgb(247, 245, 245);}
-.col-6{color: white; border: 2px solid none}
+.col {
+  color: white;
+  border: 2px solid rgb(247, 245, 245);
+}
+.col-6 {
+  color: white;
+  border: 2px solid none;
+}
 
-body{background-image: url(./colas\ de\ zorro.jpeg), url(./foto-3.jpeg), url(./foto-2.jpeg);
-  background-position: top left,center center,bottom right; 
+body {
+  background-image: url(./colas\ de\ zorro.jpeg), url(./foto-3.jpeg),
+    url(./foto-2.jpeg);
+  background-position: top left, center center, bottom right;
   background-size: 100%;
-  background-repeat: no-repeat, no-repeat, repeat}
+  background-repeat: no-repeat, no-repeat, repeat;
+}
 
-  #modelodecaja{background-color: rgb(65, 61, 61);
-    width: 300px;
-    border: 10px solid #704116;
-    padding: 30px;
-    margin: 50px;
-    font-family: 'Open Sans', sans-serif;
-  font-size: 180%;}
-
-
-#col2{background-color: rgb(65, 61, 61);
+#modelodecaja {
+  background-color: rgb(65, 61, 61);
   width: 300px;
   border: 10px solid #704116;
   padding: 30px;
   margin: 50px;
-  font-family: 'Open Sans', sans-serif;
-  }
-
-  #modelodecaja2{
-    background-color: rgb(65, 61, 61);
-    width: 300px;
-    border: 10px solid #704116;
-    padding: 30px;
-    margin: 50px;
-    font-family: 'Open Sans', sans-serif;
- font-size: 180%;}
-
- #productos2{
-   background-color: rgb(65, 61, 61);
-    width: 300px;
-    border: 10px solid #704116;
-    padding: 30px;
-    margin: 50px;
-    font-family: 'Open Sans', sans-serif;
- font-size: 85%;}
- 
- .columna1{
-   color: white;
-   font-family: 'Open Sans', sans-serif;
-   float: left;
-   width: 25%;
- }
-
- .columna2{
-   color: white;
-   font-family: 'Open Sans', sans-serif;
-  float: left;
-  width: 25%;
+  font-family: "Open Sans", sans-serif;
+  font-size: 180%;
+  opacity: 80%;
 }
 
-.columna3{
+#col2 {
+  background-color: rgb(65, 61, 61);
+  width: 300px;
+  border: 10px solid #704116;
+  padding: 30px;
+  margin: 50px;
+  font-family: "Open Sans", sans-serif;
+  opacity: 80%;
+}
+
+#modelodecaja2 {
+  background-color: rgb(65, 61, 61);
+  width: 1000px;
+  border: 5px solid #704116;
+  padding: 3px;
+  margin: 50px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 180%;
+  text-align: center;
+  opacity: 100%;
+}
+
+#productos2 {
+  background-color: rgb(65, 61, 61);
+  width: 300px;
+  border: 10px solid #704116;
+  padding: 30px;
+  margin: 50px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 85%;
+}
+
+.columna1,
+.columna2,
+.columna3,
+.columna4 {
   color: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   float: left;
   width: 25%;
 }
-
-.columna4{
-  color: white;
-  font-family: 'Open Sans', sans-serif;
-  float: left;
-  width: 25%;
-}
-
-
-
- 
-
- 
