--- a/Raiz Nomada/styleRN.css
+++ b/Raiz Nomada/styleRN.css
@@ -123,3 +123,13 @@ body {
   float: left;
   width: 25%;
 }
+
+.description{
+  height: 25px;
+  overflow: hidden;
+  transition: height .3s ease-in .3s;
+}
+
+.description:hover{
+  height: 80px;
+}
