--- a/Raiz Nomada/styleRN.css
+++ b/Raiz Nomada/styleRN.css
@@ -133,3 +133,31 @@ body {
 .description:hover{
   height: 80px;
 }
+
+#carrito{
+  min-height: 10vh;
+  max-width: 1000px;
+  margin: 0 auto;
+  width: 100%; 
+}
+
+.table__productos{
+display: flex;
+}
+
+.table__productos > img{
+  width: 9rem;
+  object-fit: contain;
+  border-radius: 6px;
+  margin-right: 20px; 
+}
+
+.table__cantidad > input{
+  width: 40px;
+  border: none;
+  outline: 0;
+  font-size: 16px;
+  font-weight: 700;
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
