--- a/Raiz Nomada/styleRN.css
+++ b/Raiz Nomada/styleRN.css
@@ -30,6 +30,14 @@ menu {
   text-align: center;
 }
 
+body {
+  background-image: url(./colas\ de\ zorro.jpeg), url(./foto-3.jpeg),
+    url(./foto-2.jpeg);
+  background-position: top left, center center, bottom right;
+  background-size: 100%;
+  background-repeat: no-repeat, no-repeat, repeat;
+}
+
 h1 {
   color: white;
   text-align: end;
@@ -40,35 +48,19 @@ h1 {
 }
 
 #mision {
-  text-align: center;
   font-size: 140%;
   text-align: end;
   color: #5b4937;
   font-family: "Open Sans", sans-serif;
 }
 
-#icono-contacto {
-  width: 3%;
-  position: fixed;
-  bottom: 10px;
-  right: 20px;
-}
-
-.col {
+.col{
   color: white;
-  border: 2px solid rgb(247, 245, 245);
+  border: 2px solid none;
 }
 .col-6 {
   color: white;
   border: 2px solid none;
-}
-
-body {
-  background-image: url(./colas\ de\ zorro.jpeg), url(./foto-3.jpeg),
-    url(./foto-2.jpeg);
-  background-position: top left, center center, bottom right;
-  background-size: 100%;
-  background-repeat: no-repeat, no-repeat, repeat;
 }
 
 #modelodecaja {
@@ -82,7 +74,7 @@ body {
   opacity: 80%;
 }
 
-#col2 {
+#sobrenosotros{
   background-color: rgb(65, 61, 61);
   width: 300px;
   border: 10px solid #704116;
@@ -104,7 +96,7 @@ body {
   opacity: 100%;
 }
 
-#productos2 {
+/* #productos2 {
   background-color: rgb(65, 61, 61);
   width: 300px;
   border: 10px solid #704116;
@@ -123,6 +115,7 @@ body {
   float: left;
   width: 25%;
 }
+*/
 
 .description{
   height: 25px;
@@ -135,7 +128,7 @@ body {
 }
 
 #carrito{
-  min-height: 10vh;
+  min-height: 8vh;
   max-width: 1000px;
   margin: 0 auto;
   width: 100%; 
@@ -160,4 +153,11 @@ display: flex;
   font-weight: 700;
   margin-right: 30px;
   margin-bottom: 20px;
+}
+
+#icono-contacto {
+  width: 3%;
+  position: fixed;
+  bottom: 10px;
+  right: 20px;
 }
