--- a/Raiz Nomada/styleRN.css
+++ b/Raiz Nomada/styleRN.css
@@ -1,14 +1,20 @@
+
 #logo-header {
   width: 75px;
 }
+.row{
+  margin-left: 0px!important;
+  margin-right: 0px!important;
+}
 
 header {
+  z-index: 2;
   position: sticky;
   list-style-type: none;
   position: sticky;
   position: -webkit-sticky;
   top: 0%;
-  background-color: transparent;
+  background: rgba(220, 220, 213, 0.2)
 }
 
 #col-der {
@@ -27,11 +33,20 @@ menu > a > li {
   color: rgb(65, 61, 61);
 }
 menu {
-  text-align: center;
+  text-align: center; 
+}
+menu a{
+color: black;
+text-decoration: none;
+}
+
+menu a:hover{
+  color: black;
+  text-decoration: underline;
 }
 
 body {
-  background-image: url(./colas\ de\ zorro.jpeg), url(./foto-3.jpeg),
+  background-image: url(./colas\ de\ zorro.jpeg), url(./colas\ de\ zorro\ 2\ entera.jpeg),
     url(./foto-2.jpeg);
   background-position: top left, center center, bottom right;
   background-size: 100%;
@@ -86,7 +101,7 @@ h1 {
 
 #modelodecaja2 {
   background-color: rgb(65, 61, 61);
-  width: 1000px;
+  width: 100%;
   border: 5px solid #704116;
   padding: 3px;
   margin: 50px;
@@ -117,6 +132,9 @@ h1 {
 }
 */
 
+#cards-productos{
+  margin: auto;
+}
 .description{
   height: 25px;
   overflow: hidden;
